cloud/kubernetes/roles/k3s-master-post/files/longhorn-frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: longhorn-ui
  name: longhorn-frontend
  namespace: longhorn-system
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: longhorn-ui
  type: NodePort
